// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not add sourcemap to namespace-import.tsx if NODE_ENV === 'production' 1`] = `

File: namespace-import.tsx
TypeScript before transform:
  import React from 'react'
  import ReactDOM from 'react-dom'
  import * as emotion from '@emotion/styled'
  
  interface Props {
    backgroundColor: string
  }
  
  const Wrapper = emotion.default('div')(
    {
      color: 'red',
    },
    (props: Props) => ({
      backgroundColor: props.backgroundColor,
    }),
  )
  
  export class SimpleComponent extends React.PureComponent {
    render() {
      return (
        <Wrapper backgroundColor="blue">
          <span>hello</span>
        </Wrapper>
      )
    }
  }
  
  ReactDOM.render(<SimpleComponent />, document.querySelector('#app'))
  


      ↓ ↓ ↓ ↓ ↓ ↓

TypeScript after transform:
  import { jsx } from "@emotion/core";
  import React from 'react';
  import ReactDOM from 'react-dom';
  import * as emotion from '@emotion/styled';
  interface Props {
    backgroundColor: string;
  }
  const Wrapper = /*#__PURE__*/ emotion.default('div', {
    target: "e1pgislt0"
  })({
    color: 'red',
  }, (props: Props) => ({
    backgroundColor: props.backgroundColor,
  }), "label:Wrapper;");
  export class SimpleComponent extends React.PureComponent {
    render() {
      return (<Wrapper backgroundColor="blue">
      <span>hello</span>
    </Wrapper>);
    }
  }
  ReactDOM.render(<SimpleComponent />, document.querySelector('#app'));
  

`;

exports[`should transform namespace-import.tsx with autoLabel false 1`] = `

File: namespace-import.tsx
TypeScript before transform:
  import React from 'react'
  import ReactDOM from 'react-dom'
  import * as emotion from '@emotion/styled'
  
  interface Props {
    backgroundColor: string
  }
  
  const Wrapper = emotion.default('div')(
    {
      color: 'red',
    },
    (props: Props) => ({
      backgroundColor: props.backgroundColor,
    }),
  )
  
  export class SimpleComponent extends React.PureComponent {
    render() {
      return (
        <Wrapper backgroundColor="blue">
          <span>hello</span>
        </Wrapper>
      )
    }
  }
  
  ReactDOM.render(<SimpleComponent />, document.querySelector('#app'))
  


      ↓ ↓ ↓ ↓ ↓ ↓

TypeScript after transform:
  import { jsx } from "@emotion/core";
  import React from 'react';
  import ReactDOM from 'react-dom';
  import * as emotion from '@emotion/styled';
  interface Props {
    backgroundColor: string;
  }
  const Wrapper = /*#__PURE__*/ emotion.default('div', {
    target: "e1pgislt0"
  })({
    color: 'red',
  }, (props: Props) => ({
    backgroundColor: props.backgroundColor,
  }), "/*# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbInRlc3RzL2ZpeHR1cmVzL25hbWVzcGFjZS1pbXBvcnQudHN4Il0sIm5hbWVzIjpbXSwibWFwcGluZ3MiOiJBQVFnQiIsImZpbGUiOiJuYW1lc3BhY2UtaW1wb3J0LnRzeCIsInNvdXJjZVJvb3QiOiIiLCJzb3VyY2VzQ29udGVudCI6WyJpbXBvcnQgUmVhY3QgZnJvbSAncmVhY3QnXG5pbXBvcnQgUmVhY3RET00gZnJvbSAncmVhY3QtZG9tJ1xuaW1wb3J0ICogYXMgZW1vdGlvbiBmcm9tICdAZW1vdGlvbi9zdHlsZWQnXG5cbmludGVyZmFjZSBQcm9wcyB7XG4gIGJhY2tncm91bmRDb2xvcjogc3RyaW5nXG59XG5cbmNvbnN0IFdyYXBwZXIgPSBlbW90aW9uLmRlZmF1bHQoJ2RpdicpKFxuICB7XG4gICAgY29sb3I6ICdyZWQnLFxuICB9LFxuICAocHJvcHM6IFByb3BzKSA9PiAoe1xuICAgIGJhY2tncm91bmRDb2xvcjogcHJvcHMuYmFja2dyb3VuZENvbG9yLFxuICB9KSxcbilcblxuZXhwb3J0IGNsYXNzIFNpbXBsZUNvbXBvbmVudCBleHRlbmRzIFJlYWN0LlB1cmVDb21wb25lbnQge1xuICByZW5kZXIoKSB7XG4gICAgcmV0dXJuIChcbiAgICAgIDxXcmFwcGVyIGJhY2tncm91bmRDb2xvcj1cImJsdWVcIj5cbiAgICAgICAgPHNwYW4+aGVsbG88L3NwYW4+XG4gICAgICA8L1dyYXBwZXI+XG4gICAgKVxuICB9XG59XG5cblJlYWN0RE9NLnJlbmRlcig8U2ltcGxlQ29tcG9uZW50IC8+LCBkb2N1bWVudC5xdWVyeVNlbGVjdG9yKCcjYXBwJykpXG4iXX0= */");
  export class SimpleComponent extends React.PureComponent {
    render() {
      return (<Wrapper backgroundColor="blue">
      <span>hello</span>
    </Wrapper>);
    }
  }
  ReactDOM.render(<SimpleComponent />, document.querySelector('#app'));
  

`;

exports[`should transform namespace-import.tsx with default configs 1`] = `

File: namespace-import.tsx
TypeScript before transform:
  import React from 'react'
  import ReactDOM from 'react-dom'
  import * as emotion from '@emotion/styled'
  
  interface Props {
    backgroundColor: string
  }
  
  const Wrapper = emotion.default('div')(
    {
      color: 'red',
    },
    (props: Props) => ({
      backgroundColor: props.backgroundColor,
    }),
  )
  
  export class SimpleComponent extends React.PureComponent {
    render() {
      return (
        <Wrapper backgroundColor="blue">
          <span>hello</span>
        </Wrapper>
      )
    }
  }
  
  ReactDOM.render(<SimpleComponent />, document.querySelector('#app'))
  


      ↓ ↓ ↓ ↓ ↓ ↓

TypeScript after transform:
  import { jsx } from "@emotion/core";
  import React from 'react';
  import ReactDOM from 'react-dom';
  import * as emotion from '@emotion/styled';
  interface Props {
    backgroundColor: string;
  }
  const Wrapper = /*#__PURE__*/ emotion.default('div', {
    target: "e1pgislt0"
  })({
    color: 'red',
  }, (props: Props) => ({
    backgroundColor: props.backgroundColor,
  }), "label:Wrapper;", "/*# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbInRlc3RzL2ZpeHR1cmVzL25hbWVzcGFjZS1pbXBvcnQudHN4Il0sIm5hbWVzIjpbXSwibWFwcGluZ3MiOiJBQVFnQiIsImZpbGUiOiJuYW1lc3BhY2UtaW1wb3J0LnRzeCIsInNvdXJjZVJvb3QiOiIiLCJzb3VyY2VzQ29udGVudCI6WyJpbXBvcnQgUmVhY3QgZnJvbSAncmVhY3QnXG5pbXBvcnQgUmVhY3RET00gZnJvbSAncmVhY3QtZG9tJ1xuaW1wb3J0ICogYXMgZW1vdGlvbiBmcm9tICdAZW1vdGlvbi9zdHlsZWQnXG5cbmludGVyZmFjZSBQcm9wcyB7XG4gIGJhY2tncm91bmRDb2xvcjogc3RyaW5nXG59XG5cbmNvbnN0IFdyYXBwZXIgPSBlbW90aW9uLmRlZmF1bHQoJ2RpdicpKFxuICB7XG4gICAgY29sb3I6ICdyZWQnLFxuICB9LFxuICAocHJvcHM6IFByb3BzKSA9PiAoe1xuICAgIGJhY2tncm91bmRDb2xvcjogcHJvcHMuYmFja2dyb3VuZENvbG9yLFxuICB9KSxcbilcblxuZXhwb3J0IGNsYXNzIFNpbXBsZUNvbXBvbmVudCBleHRlbmRzIFJlYWN0LlB1cmVDb21wb25lbnQge1xuICByZW5kZXIoKSB7XG4gICAgcmV0dXJuIChcbiAgICAgIDxXcmFwcGVyIGJhY2tncm91bmRDb2xvcj1cImJsdWVcIj5cbiAgICAgICAgPHNwYW4+aGVsbG88L3NwYW4+XG4gICAgICA8L1dyYXBwZXI+XG4gICAgKVxuICB9XG59XG5cblJlYWN0RE9NLnJlbmRlcig8U2ltcGxlQ29tcG9uZW50IC8+LCBkb2N1bWVudC5xdWVyeVNlbGVjdG9yKCcjYXBwJykpXG4iXX0= */");
  export class SimpleComponent extends React.PureComponent {
    render() {
      return (<Wrapper backgroundColor="blue">
      <span>hello</span>
    </Wrapper>);
    }
  }
  ReactDOM.render(<SimpleComponent />, document.querySelector('#app'));
  

`;

exports[`should transform namespace-import.tsx with sourcemap false 1`] = `

File: namespace-import.tsx
TypeScript before transform:
  import React from 'react'
  import ReactDOM from 'react-dom'
  import * as emotion from '@emotion/styled'
  
  interface Props {
    backgroundColor: string
  }
  
  const Wrapper = emotion.default('div')(
    {
      color: 'red',
    },
    (props: Props) => ({
      backgroundColor: props.backgroundColor,
    }),
  )
  
  export class SimpleComponent extends React.PureComponent {
    render() {
      return (
        <Wrapper backgroundColor="blue">
          <span>hello</span>
        </Wrapper>
      )
    }
  }
  
  ReactDOM.render(<SimpleComponent />, document.querySelector('#app'))
  


      ↓ ↓ ↓ ↓ ↓ ↓

TypeScript after transform:
  import { jsx } from "@emotion/core";
  import React from 'react';
  import ReactDOM from 'react-dom';
  import * as emotion from '@emotion/styled';
  interface Props {
    backgroundColor: string;
  }
  const Wrapper = /*#__PURE__*/ emotion.default('div', {
    target: "e1pgislt0"
  })({
    color: 'red',
  }, (props: Props) => ({
    backgroundColor: props.backgroundColor,
  }), "label:Wrapper;");
  export class SimpleComponent extends React.PureComponent {
    render() {
      return (<Wrapper backgroundColor="blue">
      <span>hello</span>
    </Wrapper>);
    }
  }
  ReactDOM.render(<SimpleComponent />, document.querySelector('#app'));
  

`;
